--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "abcjs": "^6.5.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "svguitar": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
